# XSBE

./: .gitignore  LICENCE  README.md  setup.cfg  setup.py  simple_node.md  transform.md
examples/rss/: feed.py  rss_schema.xml
source/tests/: test_formatting.py  test_parse.py  test_transform.py
source/xsbe/: simple_node.py  transform.py
tests/: test_transform.py
xsbe/: simple_node.py  transform.py
