[metadata]
name = xsbe
author = Philip Couling
author_email = couling@gmail.com
url = https://github.com/couling/XSBE
description = Tool for parsing XML using example XML documents as a schema
long_description = file: README.md, LICENCE.md
long_description_content_type = text/markdown
platform = any
license = MIT
classifiers =
    Licence :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = False
package_dir =
    =source
packages: find:
python_requires >= 3.6

[options.packages.find]
where = source
exclude = tests


[pylint.MASTER]
extension-pkg-whitelist=pydantic

[pylint.'MESSAGES CONTROL']
disable=fixme,
        missing-module-docstring,
        missing-class-docstring,
        missing-function-docstring,
        too-few-public-methods,
        logging-fstring-interpolation,
        no-member

[pylint.FORMAT]
max-line-length=120

[pylint.BASIC]
good-names=
    ex
    i
    j
    x
    y
    fd
